// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation test -> Basic tests -> renders with children 1`] = `
<Navigation>
  <div
    className="mac-background"
  >
    <TopNav
      width={1024}
    >
      <div
        className="top-nav-bar"
      >
        <div
          className="space-between max-width"
        >
          <div
            className="top-nav-iamandrew-logo"
            onClick={[Function]}
          >
            iamandrew
          </div>
          <div
            className="top-nav-links-container"
          >
            <div
              className="top-nav-item margin-right"
              onClick={[Function]}
            >
              projects
            </div>
            <div
              className="top-nav-item"
              onClick={[Function]}
            >
              about
            </div>
          </div>
        </div>
      </div>
    </TopNav>
    <div
      className="navigation-content max-width"
    >
      I"m a child!
    </div>
  </div>
</Navigation>
`;

exports[`Navigation test -> Basic tests -> renders with state 1`] = `
<Navigation>
  <div
    className="mac-background"
  >
    <TopNav
      width={1024}
    >
      <div
        className="top-nav-bar"
      >
        <div
          className="space-between max-width"
        >
          <div
            className="top-nav-iamandrew-logo"
            onClick={[Function]}
          >
            iamandrew
          </div>
          <div
            className="top-nav-links-container"
          >
            <div
              className="top-nav-item margin-right"
              onClick={[Function]}
            >
              projects
            </div>
            <div
              className="top-nav-item"
              onClick={[Function]}
            >
              about
            </div>
          </div>
        </div>
      </div>
    </TopNav>
    <div
      className="navigation-content max-width"
    />
  </div>
</Navigation>
`;

exports[`Navigation test -> Basic tests -> should render a navigation 1`] = `
<div
  className="mac-background"
>
  <TopNav
    width={1024}
  />
  <div
    className="navigation-content max-width"
  />
</div>
`;
